--- a/.github/workflows /ci.yaml
+++ b/.github/workflows /ci.yaml
@@ -1,6 +1,19 @@
 name: CI
 
-on: [push, pull_request]
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the "master" branch
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   ci:
