--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,17 +30,16 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
+    - name: Install tooling
       run: |
         python -m pip install --upgrade pip
         pip install pipenv
 
-    - name: Run pipenv and tests
+    - name: Update venv using pipenv and run tests
       run: |
         pipenv install -d
-        # stop the build if there are Python syntax errors or undefined names
         pipenv run pytest
