--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,11 @@ jobs:
       run: |
         pipenv install -d
         pipenv run pytest
+
+    - name: Lint Code Base
+      uses: super-linter/super-linter@v5
+      env:
+        VALIDATE_ALL_CODEBASE: false
+        DEFAULT_BRANCH: "master"
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #GITHUB_WORKSPACE: /
