--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@
 name: CI
 
 # Controls when the workflow will run
-on:
+on:  # yamllint disable-line rule:truthy
   # Triggers the workflow on push to the "master" branch
   push:
     branches: [ "master" ]
